--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,3 +1,24 @@
 footer {
+  margin-top: 40px;
+  padding-bottom: 40px;
 
+  .innerFooter {
+    .cara {
+      width: 2px;
+      height: 195px;
+      background: #D8D8D8;
+      margin: 0 auto;
+      display: block;
+      margin-bottom: 40px;
+    }
+
+    p {
+      font-family: AveMedium;
+      font-size: 13px;
+      color: #ABABAB;
+      letter-spacing: 1px;
+      text-align: center;
+      width: 100%;
+    }
+  }
 }
