--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,3 +1,19 @@
 header {
+  width: 100%;
+  background: #fff;
+  text-align: center;
+  height: 50px;
+  position: fixed;
 
+  a {
+    width: 100%;
+    text-align: center;
+    font-family: MaaBold;
+    letter-spacing: 1.5px;
+    font-size: 16px;
+    color: #1C1C1C;
+    text-decoration: none;
+    position: relative;
+    top: 17px;
+  }
 }
