--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,10 @@
 
   <body>
 
-    {% include header.html %}
+    <header>
+      <a href="/">JIRI STEPANEK</a>
+    </header>
+
 
     {{ content }}
 
