--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -13,7 +13,7 @@ footer {
     }
 
     p {
-      font-family: AveMedium;
+      font-family: AveRoman;
       font-size: 13px;
       color: #ABABAB;
       letter-spacing: 1px;
