--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,6 +4,7 @@ header {
   text-align: center;
   height: 50px;
   position: fixed;
+  top: 0;
 
   a {
     width: 100%;
@@ -15,5 +16,25 @@ header {
     text-decoration: none;
     position: relative;
     top: 17px;
+    text-transform: uppercase;
+  }
+
+  .goBack {
+    position: absolute;
+    left: 15px;
+    top: 19px;
+    text-align: left;
+    font-size: 13px;
+    color: #757575;
+    letter-spacing: 1px;
+  }
+
+  .doPrava {
+    position: absolute;
+    right: 15px;
+    top: 16px;
+    text-align: right;
+    letter-spacing: 1.5px;
+    font-size: 16px;
   }
 }
