--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -76,10 +76,11 @@
   margin-top: 40px;
 
   p {
-    font-family: AveMedium;
+    font-family: AveBook;
     font-size: 15px;
     color: #FFFFFF;
     text-align: center;
+    line-height: 24px;
   }
 
   a {
@@ -196,7 +197,7 @@
         h3 {
           a {
             text-decoration: none;
-            font-family: AveHeavy;
+            font-family: AveMedium;
             font-size: 21px;
             color: #1C1C1C;
           }
