--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,8 +6,10 @@
   <body>
 
     <header>
-      <a class="goBack" href="/">get me back</a>
-      <a class="doPrava" href="/">JIRI STEPANEK</a>
+      <div class="headerInner">
+        <a class="goBack" href="/">get me back</a>
+        <a class="doPrava" href="/">JIRI STEPANEK</a>
+      </div>
     </header>
 
     <section class="clanek">
@@ -22,7 +24,7 @@
     </section>
 
     <section class="podClankem">
-      <div class="levaCast articles">
+      <div class="pravaCast articles">
         <div class="articlesInner">
           <h2>articles</h2>
           <ul>
@@ -38,7 +40,7 @@
           </ul>
         </div>
       </div>
-      <div class="pravaCast">
+      <div class="levaCast">
         <div class="konzultace">
           <p>Can I help you with anything?<br>Let’s chat for 30 minutes!</p>
           <a href="https://jiristepanek1.typeform.com/to/QoGofW">schedule free consultation</a>
