--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -7,6 +7,13 @@
     line-height: 23px;
     font-family: AveRoman;
     margin: 0 auto;
+
+    @media screen and (min-width: 700px) {
+      width: 290px;
+      display: inline-block;
+      float: right;
+      margin-top: 23px;
+    }
   }
 
   img {
@@ -15,6 +22,16 @@
     margin: 0 auto;
     margin-top: 30px;
     width: 100%;
+
+    @media screen and (min-width: 700px) {
+      width: 290px;
+      display: inline-block;
+      margin: 0;
+    }
+  }
+
+  @media screen and (min-width: 700px) {
+    padding-top: 90px;
   }
 }
 
@@ -65,6 +82,17 @@
         }
       }
     }
+
+    @media screen and (min-width: 700px) {
+      width: 290px;
+      display: inline-block;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (min-width: 700px) {
+    margin-top: 60px;
   }
 }
 
@@ -97,6 +125,15 @@
     padding: 10px 15px;
     display: block;
     margin-top: 15px;
+  }
+}
+
+.hpKonzultace {
+  @media screen and (min-width: 700px) {
+    width: 290px;
+    display: inline-block;
+    float: right;
+    margin-top: 0;
   }
 }
 
@@ -175,6 +212,15 @@
         }
       }
     }
+
+    @media screen and (min-width: 700px) {
+      width: 290px;
+      display: inline-block;
+    }
+  }
+
+  @media screen and (min-width: 700px) {
+    margin-top: 80px;
   }
 }
 
@@ -216,5 +262,18 @@
         }
       }
     }
+  }
+
+  @media screen and (min-width: 700px) {
+    width: 290px;
+    display: inline-block;
+    float: right;
+    margin: 0;
+  }
+}
+
+.neDesktop {
+  @media screen and (min-width: 700px) {
+    display: none;
   }
 }
