--- a/_sass/_zaklad.scss
+++ b/_sass/_zaklad.scss
@@ -63,4 +63,11 @@ h2 {
 section {
   width: calc(100% - 30px);
   margin: 0 auto;
+  max-width: 400px;
+
+  @media screen and (min-width: 700px) {
+    width: 660px;
+    position: relative;
+    max-width: none;
+  }
 }
