--- a/_sass/_zaklad.scss
+++ b/_sass/_zaklad.scss
@@ -44,6 +44,10 @@ defaults
 
 *****************************************/
 
+html {
+  background: #fff;
+}
+
 h1, h2, h3, h4, h5, p, span, a {
   font-weight: normal !important;
   font-family: AveBook;
