--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -66,18 +66,18 @@
     }
 
     .kontakty {
-      margin-top: 10px;
+      margin-top: 15px;
 
       a {
         font-family: AveRoman;
-        font-size: 12px;
+        font-size: 15px;
         color: #575757;
         text-align: left;
         text-decoration: none;
 
         &:last-child {
           float: right;
-          margin-top: 2px;
+          margin-top: 0;
         }
       }
     }
@@ -166,7 +166,7 @@
 
           div {
             width: 100%;
-            height: 150px;
+            height: 180px;
           }
         }
 
