--- a/_sass/_clanek.scss
+++ b/_sass/_clanek.scss
@@ -25,6 +25,11 @@
     letter-spacing: 1px;
   }
 
+  h3 {
+    font-size: 16px;
+    font-family: AveMedium;
+  }
+
   .content {
     font-family: AveRoman;
     font-size: 12px;
